@@ -1,3 +1,7 @@
+2008-09-28  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/conv_decimal.adb: New test.
+
 2008-09-26  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/37275
